# docs/swagger.json
@@ -66,6 +66,7 @@
             "required": [
                 "name",
                 "shahar",
+                "telefon",
                 "telegram_id",
                 "viloyat"
             ],
@@ -74,6 +75,9 @@
                     "type": "string"
                 },
                 "shahar": {
+                    "type": "string"
+                },
+                "telefon": {
                     "type": "string"
                 },
                 "telegram_id": {
